z-index fix to nav

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,6 +12,7 @@ html, body {
   left: 0;
   top: 0;
   background-color: #eee;
+  z-index: 10;
 
   /* changes for large screen */
   height: 60px;
